tests/negative/test_type_not_id.orb
let case x = 0;

fnc main() {
}